Module remove button - Fix the text overlapping issue of module remove buttons on member dashboard

--- a/plugins/members/dashboard/assets/css/dashboard.css
+++ b/plugins/members/dashboard/assets/css/dashboard.css
@@ -229,6 +229,9 @@
 	transform: translate(-50%, -50%);
 	font-family: 'Fontcons';
 }
+.module-links .remove.confirm:before {
+	left: 20% !important;
+}
 .module-links .remove.confirm,
 .module-links .remove.confirm:hover {
 	color: #FFF;
